--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	<link rel='icon' type='image/png' href='./favicon.png'>
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
-	<script src="../node_modules/nw-dev/lib/dev.js" data-ignore="data.json|*.md"></script>
+	<script src="devTools.js"></script>
 	<script defer src='./build/bundle.js'></script>
 </head>
 
